--- a/frontend/style.css
+++ b/frontend/style.css
@@ -307,16 +307,31 @@ select:focus {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh; /* Take full screen */
     background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;  /* Horizontal centering */
+    align-items: center; 
 }
+
+/* .model-keys{
+    text-align: left;
+}
+
+.keys{
+    display: inline-block;
+    text-align: center;
+}
+
+.keys.li{
+    padding-left: 50px;
+} */
 
 .modal-content {
     background-color: white;
     margin: 15% auto;
     padding: 20px;
     width: 40%;
-    border-radius: 8px;
+    border-radius: 10px;
     text-align: center;
 }
 
